--- a/src/Toolbox.WebApi/project.json
+++ b/src/Toolbox.WebApi/project.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Toolbox for Web API projects in ASP.NET Core.",
     "authors": [ "digipolis.be" ],
     "tags": [ "" ],
@@ -8,8 +8,7 @@
     "dependencies": {
         "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
         "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc1-final",
-        "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
-        "Toolbox.Common":  "1.1.0"
+        "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final"
     },
     "frameworks": {
         "dnx451": {
