--- a/src/Toolbox.WebApi/project.json
+++ b/src/Toolbox.WebApi/project.json
@@ -8,8 +8,7 @@
   "dependencies": {
     "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
-    "Microsoft.Net.Http": "2.2.22",
+    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final"
   },
     "frameworks": {
         "dnx451": {
