--- a/src/Toolbox.WebApi/project.json
+++ b/src/Toolbox.WebApi/project.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final"
+    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
+    "System.Net.Http": "4.0.0"
   },
     "frameworks": {
         "dnx451": {
