--- a/src/Toolbox.WebApi/project.json
+++ b/src/Toolbox.WebApi/project.json
@@ -1,15 +1,17 @@
 {
-    "version": "1.2.3",
+    "version": "1.3.0",
     "description": "Toolbox for Web API projects in ASP.NET Core.",
     "authors": [ "digipolis.be" ],
     "tags": [ "" ],
     "projectUrl": "",
     "licenseUrl": "",
-    "dependencies": {
-        "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
-        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc1-final",
-        "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final"
-    },
+  "dependencies": {
+    "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
+    "Toolbox.Errors": "1.2.0",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final"
+  },
     "frameworks": {
         "dnx451": {
             "frameworkAssemblies": 
